--- a/Willow.html
+++ b/Willow.html
@@ -3,23 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">  
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=UnifrakturMaguntia|Frijole&effect=emboss|neon">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=UnifrakturMaguntia|Frijole|DynaPuff&effect=emboss|neon">
     <link rel="stylesheet" href="Willow.css">
     <title>Willow</title>
 </head>
 <body>
     <header>
-        <!-- <img src="DesktopBackground/00001.jpg" alt=""> -->
+        <div id="logo">W</div>
         <div class="hero-text font-effect-emboss">Willow Studio</div>
         <nav>
-            <a href="#">About</a>
-            <a href="#">Gallery</a>
-            <a href="#">Shop</a>
-            <a href="#"><div class="logo">W</div></a>
-            <a href="#">Blog</a>
-            <a href="#">Contact</a>
-            <a href="#">Buy now</a>
+            <label for="menu">&#9776;
+            </label>
+            <input type="checkbox" id="menu">
+            <div class="links">
+                <a href="#">About</a>
+                <a href="#">Gallery</a>
+                <a href="#">Shop</a>
+                <a href=""><div class="logo">W</div></a>
+                <a href="#">Blog</a>
+                <a href="#">Contact</a>
+                <a href="#">Buy now</a>
+            </div>
         </nav>
     </header>
     <section>
@@ -30,7 +36,7 @@
             <div class="empty">
                 <div class="shadow-empty"></div>
                 <div class="text">
-                    <h6>Coaching + Workshops</h6>
+                    <h6 class="font-effect-emboss">Coaching + Workshops</h6>
                     <p>For freelancers</p>
                 </div>
             </div>
@@ -54,7 +60,7 @@
             <div class="empty">
                 <div class="shadow-empty"></div>
                 <div class="text">
-                    <h6>From the shop</h6>
+                    <h6 class="font-effect-emboss">From the shop</h6>
                     <p>Kickstart your biz</p>
                 </div>
             </div>
